--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
+<!DOCTYPE HTML>
 <html>
-<head><title>
+<head>
+<link rel= "stylesheet" type="text/css" href="try1.css">
+<title>
 My Labs
-</title></head>
+</title>
+</head>
 <body><h2>
 <center>My Labs</center></h2>
 <ul>
