--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ My Labs
 <a href="lab6/lab6.html"> Lab 6 </a>
 <p><li>
 <a href="lab7/lab7.html"> Lab 7 </a>
+<p><li>
+<a href="rails/addrbk/app/views/entries/index.html.erb"> Address Book </a>
+<p><li>
+<a href="rails/videodb/app/views/videos/index.html.erb"> Video Database </a>
 </ul>
 </body>
 </html>
